Add npm test command for Truffle tests

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:react": "react-scripts test",
+    "test:truffle": "truffle test"
   },
   "eslintConfig": {
     "extends": "react-app"
